--- a/src/sass/modules/_allModules.scss
+++ b/src/sass/modules/_allModules.scss
@@ -1,5 +1,3 @@
-@import "./Home/consign1";
-@import "./Home/consign2";
-@import "./Home/consign3";
-
-@import "./Home/header";
+@import "./Consignes/consign1";
+@import "./Consignes/consign2";
+@import "./Consignes/consign3";
