--- a/public/css/app.css
+++ b/public/css/app.css
@@ -38,6 +38,12 @@
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
+  --bs-darkbrown: #89543d;
+  --bs-beige: #FFF5F1;
+  --bs-brown: #a67c52;
+  --bs-todo: rgb(145, 140, 140);
+  --bs-doing: rgb(129, 161, 77);
+  --bs-done: rgb(10, 153, 10);
   --bs-primary-rgb: 13, 110, 253;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
@@ -46,6 +52,12 @@
   --bs-danger-rgb: 220, 53, 69;
   --bs-light-rgb: 248, 249, 250;
   --bs-dark-rgb: 33, 37, 41;
+  --bs-darkbrown-rgb: 137, 84, 61;
+  --bs-beige-rgb: 255, 245, 241;
+  --bs-brown-rgb: 166, 124, 82;
+  --bs-todo-rgb: 145, 140, 140;
+  --bs-doing-rgb: 129, 161, 77;
+  --bs-done-rgb: 10, 153, 10;
   --bs-white-rgb: 255, 255, 255;
   --bs-black-rgb: 0, 0, 0;
   --bs-body-color-rgb: 33, 37, 41;
@@ -2938,6 +2950,108 @@ textarea.form-control-lg {
   --bs-btn-disabled-border-color: #212529;
 }
 
+.btn-darkbrown {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #89543d;
+  --bs-btn-border-color: #89543d;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #744734;
+  --bs-btn-hover-border-color: #6e4331;
+  --bs-btn-focus-shadow-rgb: 155, 110, 90;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #6e4331;
+  --bs-btn-active-border-color: #673f2e;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #89543d;
+  --bs-btn-disabled-border-color: #89543d;
+}
+
+.btn-beige {
+  --bs-btn-color: #000;
+  --bs-btn-bg: #FFF5F1;
+  --bs-btn-border-color: #FFF5F1;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #fff7f3;
+  --bs-btn-hover-border-color: #fff6f2;
+  --bs-btn-focus-shadow-rgb: 217, 208, 205;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #fff7f4;
+  --bs-btn-active-border-color: #fff6f2;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: #FFF5F1;
+  --bs-btn-disabled-border-color: #FFF5F1;
+}
+
+.btn-brown {
+  --bs-btn-color: #000;
+  --bs-btn-bg: #a67c52;
+  --bs-btn-border-color: #a67c52;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #b3906c;
+  --bs-btn-hover-border-color: #af8963;
+  --bs-btn-focus-shadow-rgb: 141, 105, 70;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #b89675;
+  --bs-btn-active-border-color: #af8963;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: #a67c52;
+  --bs-btn-disabled-border-color: #a67c52;
+}
+
+.btn-todo {
+  --bs-btn-color: #000;
+  --bs-btn-bg: rgb(145, 140, 140);
+  --bs-btn-border-color: rgb(145, 140, 140);
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #a29d9d;
+  --bs-btn-hover-border-color: #9c9898;
+  --bs-btn-focus-shadow-rgb: 123, 119, 119;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #a7a3a3;
+  --bs-btn-active-border-color: #9c9898;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: rgb(145, 140, 140);
+  --bs-btn-disabled-border-color: rgb(145, 140, 140);
+}
+
+.btn-doing {
+  --bs-btn-color: #000;
+  --bs-btn-bg: rgb(129, 161, 77);
+  --bs-btn-border-color: rgb(129, 161, 77);
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #94af68;
+  --bs-btn-hover-border-color: #8eaa5f;
+  --bs-btn-focus-shadow-rgb: 110, 137, 65;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #9ab471;
+  --bs-btn-active-border-color: #8eaa5f;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: rgb(129, 161, 77);
+  --bs-btn-disabled-border-color: rgb(129, 161, 77);
+}
+
+.btn-done {
+  --bs-btn-color: #000;
+  --bs-btn-bg: rgb(10, 153, 10);
+  --bs-btn-border-color: rgb(10, 153, 10);
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #2fa82f;
+  --bs-btn-hover-border-color: #23a323;
+  --bs-btn-focus-shadow-rgb: 9, 130, 9;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #3bad3b;
+  --bs-btn-active-border-color: #23a323;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: rgb(10, 153, 10);
+  --bs-btn-disabled-border-color: rgb(10, 153, 10);
+}
+
 .btn-outline-primary {
   --bs-btn-color: #0d6efd;
   --bs-btn-border-color: #0d6efd;
@@ -3071,6 +3185,108 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: #212529;
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: #212529;
+  --bs-gradient: none;
+}
+
+.btn-outline-darkbrown {
+  --bs-btn-color: #89543d;
+  --bs-btn-border-color: #89543d;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #89543d;
+  --bs-btn-hover-border-color: #89543d;
+  --bs-btn-focus-shadow-rgb: 137, 84, 61;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #89543d;
+  --bs-btn-active-border-color: #89543d;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #89543d;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #89543d;
+  --bs-gradient: none;
+}
+
+.btn-outline-beige {
+  --bs-btn-color: #FFF5F1;
+  --bs-btn-border-color: #FFF5F1;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #FFF5F1;
+  --bs-btn-hover-border-color: #FFF5F1;
+  --bs-btn-focus-shadow-rgb: 255, 245, 241;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #FFF5F1;
+  --bs-btn-active-border-color: #FFF5F1;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #FFF5F1;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #FFF5F1;
+  --bs-gradient: none;
+}
+
+.btn-outline-brown {
+  --bs-btn-color: #a67c52;
+  --bs-btn-border-color: #a67c52;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #a67c52;
+  --bs-btn-hover-border-color: #a67c52;
+  --bs-btn-focus-shadow-rgb: 166, 124, 82;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #a67c52;
+  --bs-btn-active-border-color: #a67c52;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #a67c52;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #a67c52;
+  --bs-gradient: none;
+}
+
+.btn-outline-todo {
+  --bs-btn-color: rgb(145, 140, 140);
+  --bs-btn-border-color: rgb(145, 140, 140);
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: rgb(145, 140, 140);
+  --bs-btn-hover-border-color: rgb(145, 140, 140);
+  --bs-btn-focus-shadow-rgb: 145, 140, 140;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: rgb(145, 140, 140);
+  --bs-btn-active-border-color: rgb(145, 140, 140);
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: rgb(145, 140, 140);
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: rgb(145, 140, 140);
+  --bs-gradient: none;
+}
+
+.btn-outline-doing {
+  --bs-btn-color: rgb(129, 161, 77);
+  --bs-btn-border-color: rgb(129, 161, 77);
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: rgb(129, 161, 77);
+  --bs-btn-hover-border-color: rgb(129, 161, 77);
+  --bs-btn-focus-shadow-rgb: 129, 161, 77;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: rgb(129, 161, 77);
+  --bs-btn-active-border-color: rgb(129, 161, 77);
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: rgb(129, 161, 77);
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: rgb(129, 161, 77);
+  --bs-gradient: none;
+}
+
+.btn-outline-done {
+  --bs-btn-color: rgb(10, 153, 10);
+  --bs-btn-border-color: rgb(10, 153, 10);
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: rgb(10, 153, 10);
+  --bs-btn-hover-border-color: rgb(10, 153, 10);
+  --bs-btn-focus-shadow-rgb: 10, 153, 10;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: rgb(10, 153, 10);
+  --bs-btn-active-border-color: rgb(10, 153, 10);
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: rgb(10, 153, 10);
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: rgb(10, 153, 10);
   --bs-gradient: none;
 }
 
@@ -4686,6 +4902,60 @@ textarea.form-control-lg {
   color: #101214;
 }
 
+.alert-darkbrown {
+  --bs-alert-color: #523225;
+  --bs-alert-bg: #e7ddd8;
+  --bs-alert-border-color: #dcccc5;
+}
+.alert-darkbrown .alert-link {
+  color: #42281e;
+}
+
+.alert-beige {
+  --bs-alert-color: #666260;
+  --bs-alert-bg: #fffdfc;
+  --bs-alert-border-color: #fffcfb;
+}
+.alert-beige .alert-link {
+  color: #524e4d;
+}
+
+.alert-brown {
+  --bs-alert-color: #644a31;
+  --bs-alert-bg: #ede5dc;
+  --bs-alert-border-color: #e4d8cb;
+}
+.alert-brown .alert-link {
+  color: #503b27;
+}
+
+.alert-todo {
+  --bs-alert-color: #575454;
+  --bs-alert-bg: #e9e8e8;
+  --bs-alert-border-color: #dedddd;
+}
+.alert-todo .alert-link {
+  color: #464343;
+}
+
+.alert-doing {
+  --bs-alert-color: #4d612e;
+  --bs-alert-bg: #e6ecdb;
+  --bs-alert-border-color: #d9e3ca;
+}
+.alert-doing .alert-link {
+  color: #3e4e25;
+}
+
+.alert-done {
+  --bs-alert-color: #065c06;
+  --bs-alert-bg: #ceebce;
+  --bs-alert-border-color: #b6e0b6;
+}
+.alert-done .alert-link {
+  color: #054a05;
+}
+
 @keyframes progress-bar-stripes {
   0% {
     background-position-x: 1rem;
@@ -5088,6 +5358,90 @@ textarea.form-control-lg {
   color: #fff;
   background-color: #141619;
   border-color: #141619;
+}
+
+.list-group-item-darkbrown {
+  color: #523225;
+  background-color: #e7ddd8;
+}
+.list-group-item-darkbrown.list-group-item-action:hover, .list-group-item-darkbrown.list-group-item-action:focus {
+  color: #523225;
+  background-color: #d0c7c2;
+}
+.list-group-item-darkbrown.list-group-item-action.active {
+  color: #fff;
+  background-color: #523225;
+  border-color: #523225;
+}
+
+.list-group-item-beige {
+  color: #666260;
+  background-color: #fffdfc;
+}
+.list-group-item-beige.list-group-item-action:hover, .list-group-item-beige.list-group-item-action:focus {
+  color: #666260;
+  background-color: #e6e4e3;
+}
+.list-group-item-beige.list-group-item-action.active {
+  color: #fff;
+  background-color: #666260;
+  border-color: #666260;
+}
+
+.list-group-item-brown {
+  color: #644a31;
+  background-color: #ede5dc;
+}
+.list-group-item-brown.list-group-item-action:hover, .list-group-item-brown.list-group-item-action:focus {
+  color: #644a31;
+  background-color: #d5cec6;
+}
+.list-group-item-brown.list-group-item-action.active {
+  color: #fff;
+  background-color: #644a31;
+  border-color: #644a31;
+}
+
+.list-group-item-todo {
+  color: #575454;
+  background-color: #e9e8e8;
+}
+.list-group-item-todo.list-group-item-action:hover, .list-group-item-todo.list-group-item-action:focus {
+  color: #575454;
+  background-color: #d2d1d1;
+}
+.list-group-item-todo.list-group-item-action.active {
+  color: #fff;
+  background-color: #575454;
+  border-color: #575454;
+}
+
+.list-group-item-doing {
+  color: #4d612e;
+  background-color: #e6ecdb;
+}
+.list-group-item-doing.list-group-item-action:hover, .list-group-item-doing.list-group-item-action:focus {
+  color: #4d612e;
+  background-color: #cfd4c5;
+}
+.list-group-item-doing.list-group-item-action.active {
+  color: #fff;
+  background-color: #4d612e;
+  border-color: #4d612e;
+}
+
+.list-group-item-done {
+  color: #065c06;
+  background-color: #ceebce;
+}
+.list-group-item-done.list-group-item-action:hover, .list-group-item-done.list-group-item-action:focus {
+  color: #065c06;
+  background-color: #b9d4b9;
+}
+.list-group-item-done.list-group-item-action.active {
+  color: #fff;
+  background-color: #065c06;
+  border-color: #065c06;
 }
 
 .btn-close {
@@ -6596,6 +6950,36 @@ textarea.form-control-lg {
   background-color: RGBA(33, 37, 41, var(--bs-bg-opacity, 1)) !important;
 }
 
+.text-bg-darkbrown {
+  color: #fff !important;
+  background-color: RGBA(137, 84, 61, var(--bs-bg-opacity, 1)) !important;
+}
+
+.text-bg-beige {
+  color: #000 !important;
+  background-color: RGBA(255, 245, 241, var(--bs-bg-opacity, 1)) !important;
+}
+
+.text-bg-brown {
+  color: #000 !important;
+  background-color: RGBA(166, 124, 82, var(--bs-bg-opacity, 1)) !important;
+}
+
+.text-bg-todo {
+  color: #000 !important;
+  background-color: RGBA(145, 140, 140, var(--bs-bg-opacity, 1)) !important;
+}
+
+.text-bg-doing {
+  color: #000 !important;
+  background-color: RGBA(129, 161, 77, var(--bs-bg-opacity, 1)) !important;
+}
+
+.text-bg-done {
+  color: #000 !important;
+  background-color: RGBA(10, 153, 10, var(--bs-bg-opacity, 1)) !important;
+}
+
 .link-primary {
   color: #0d6efd !important;
 }
@@ -6650,6 +7034,48 @@ textarea.form-control-lg {
 }
 .link-dark:hover, .link-dark:focus {
   color: #1a1e21 !important;
+}
+
+.link-darkbrown {
+  color: #89543d !important;
+}
+.link-darkbrown:hover, .link-darkbrown:focus {
+  color: #6e4331 !important;
+}
+
+.link-beige {
+  color: #FFF5F1 !important;
+}
+.link-beige:hover, .link-beige:focus {
+  color: #fff7f4 !important;
+}
+
+.link-brown {
+  color: #a67c52 !important;
+}
+.link-brown:hover, .link-brown:focus {
+  color: #b89675 !important;
+}
+
+.link-todo {
+  color: rgb(145, 140, 140) !important;
+}
+.link-todo:hover, .link-todo:focus {
+  color: #a7a3a3 !important;
+}
+
+.link-doing {
+  color: rgb(129, 161, 77) !important;
+}
+.link-doing:hover, .link-doing:focus {
+  color: #9ab471 !important;
+}
+
+.link-done {
+  color: rgb(10, 153, 10) !important;
+}
+.link-done:hover, .link-done:focus {
+  color: #3bad3b !important;
 }
 
 .ratio {
@@ -7111,6 +7537,36 @@ textarea.form-control-lg {
 .border-dark {
   --bs-border-opacity: 1;
   border-color: rgba(var(--bs-dark-rgb), var(--bs-border-opacity)) !important;
+}
+
+.border-darkbrown {
+  --bs-border-opacity: 1;
+  border-color: rgba(var(--bs-darkbrown-rgb), var(--bs-border-opacity)) !important;
+}
+
+.border-beige {
+  --bs-border-opacity: 1;
+  border-color: rgba(var(--bs-beige-rgb), var(--bs-border-opacity)) !important;
+}
+
+.border-brown {
+  --bs-border-opacity: 1;
+  border-color: rgba(var(--bs-brown-rgb), var(--bs-border-opacity)) !important;
+}
+
+.border-todo {
+  --bs-border-opacity: 1;
+  border-color: rgba(var(--bs-todo-rgb), var(--bs-border-opacity)) !important;
+}
+
+.border-doing {
+  --bs-border-opacity: 1;
+  border-color: rgba(var(--bs-doing-rgb), var(--bs-border-opacity)) !important;
+}
+
+.border-done {
+  --bs-border-opacity: 1;
+  border-color: rgba(var(--bs-done-rgb), var(--bs-border-opacity)) !important;
 }
 
 .border-white {
@@ -7975,6 +8431,36 @@ textarea.form-control-lg {
   color: rgba(var(--bs-dark-rgb), var(--bs-text-opacity)) !important;
 }
 
+.text-darkbrown {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-darkbrown-rgb), var(--bs-text-opacity)) !important;
+}
+
+.text-beige {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-beige-rgb), var(--bs-text-opacity)) !important;
+}
+
+.text-brown {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-brown-rgb), var(--bs-text-opacity)) !important;
+}
+
+.text-todo {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-todo-rgb), var(--bs-text-opacity)) !important;
+}
+
+.text-doing {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-doing-rgb), var(--bs-text-opacity)) !important;
+}
+
+.text-done {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-done-rgb), var(--bs-text-opacity)) !important;
+}
+
 .text-black {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-black-rgb), var(--bs-text-opacity)) !important;
@@ -8064,6 +8550,36 @@ textarea.form-control-lg {
 .bg-dark {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-dark-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-darkbrown {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-darkbrown-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-beige {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-beige-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-brown {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-brown-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-todo {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-todo-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-doing {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-doing-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-done {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-done-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .bg-black {
@@ -10719,6 +11235,32 @@ textarea.form-control-lg {
   .d-print-none {
     display: none !important;
   }
+}
+.boite {
+  width: 400px;
+  height: auto;
+  border: 1px solid #89543d;
+}
+
+#todoT {
+  margin-top: 30px;
+}
+
+.checked {
+  background-color: rgb(113, 212, 113);
+}
+
+.boite {
+  width: 100vw;
+  height: 100%;
+  border: 1px solid #89543d;
+  margin-top: 40px;
+}
+
+.colon {
+  margin: 20px;
+  width: 40%;
+  height: 500px;
 }
 
 /*# sourceMappingURL=app.css.map */
