--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -8,9 +8,9 @@ $darkbrown : #89543d;
 $beige : #FFF5F1;
 $brown : #a67c52;
 
-$todo:rgb(145, 140, 140);
-$doing:rgb(129, 161, 77);
-$done:rgb(10, 153, 10);
+$todo:#c9cba3;
+$doing:#ffe1a8;
+$done:#e26d5c;
 
 $custom-colors : (
     "darkbrown" : $darkbrown ,
