--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11252,7 +11252,6 @@ textarea.form-control-lg {
 
 .box-colns {
   width: 100vw;
-  height: 100%;
   border: #89543d;
   margin-top: 40px;
 }
@@ -11261,7 +11260,7 @@ textarea.form-control-lg {
   border: 2px solid #89543d;
   margin: 15px;
   width: 40%;
-  height: 520px;
+  height: auto;
 }
 
 h1, .h1 {
