--- a/src/sass/modules/Consignes/_consign2.scss
+++ b/src/sass/modules/Consignes/_consign2.scss
@@ -1,7 +1,6 @@
 //? todo list boite
 .box-colns{
     width: 100vw;
-    height: 100%;
     border: $darkbrown;
     margin-top: 40px;
 }
@@ -9,7 +8,7 @@
     border: 2px solid $darkbrown;
     margin: 15px;
     width: 40%;
-    height: 520px;
+    height: auto;
 }
 h1{
     color:$darkbrown;
