--- a/public/css/mycss.css
+++ b/public/css/mycss.css
@@ -1,3 +1,12 @@
+.back{
+    height: 40px;
+    width: 40px;
+    background-color: cadetblue;
+    border-radius: 5px 5px 5px 5px;
+    margin-left: 10px;
+    margin-top: 10px;
+
+}
 .guide h1{
     color:#8a3903;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
@@ -18,17 +27,28 @@
     width: 40%;
     height: auto;
 }
-h1{
+.colon h1{
     color:#89543d;
     font-family:cursive;
     text-decoration: underline;
 }
-.back{
-    height: 40px;
-    width: 40px;
-    background-color: cadetblue;
-    border-radius: 5px 5px 5px 5px;
-    margin-left: 10px;
-    margin-top: 10px;
-
+/* ********************************** consigne 3 */
+.divDad h1{
+    color:#350b57;
+    font-family:cursive;
+}
+.colonKid{
+    border: 2px solid #350b57;
+    margin: 15px;
+    width: 40%;
+    height: auto;
+}
+.bg-kid1{
+    background-color: rgb(95, 160, 160, 0.705);
+}
+.bg-kid2{
+    background-color: rgba(64, 81, 156, 0.705);
+}
+.bg-kid3{
+    background-color: rgba(161, 71, 121, 0.705);
 }
